--- a/app/src/main/res/layout/main_menu_item.xml
+++ b/app/src/main/res/layout/main_menu_item.xml
@@ -14,6 +14,7 @@
         android:layout_alignParentStart="true"
         android:layout_centerVertical="true"
         tools:ignore="HardcodedText"
+        android:visibility="invisible"
         android:contentDescription="LOGO!" />
 
     <TextView
