--- a/app/src/main/res/layout/second_display.xml
+++ b/app/src/main/res/layout/second_display.xml
@@ -83,7 +83,8 @@
             android:textAlignment="center"
             android:textSize="18sp"
             android:inputType="textMultiLine"
-            tools:ignore="HardcodedText,RtlCompat" />
+            tools:ignore="HardcodedText,LabelFor,RtlCompat"
+            android:autofillHints="Enter there" />
 
     </LinearLayout>
 
